--- a/ui/pyrex.ui
+++ b/ui/pyrex.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>501</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -16,146 +16,14 @@
   <property name="windowTitle">
    <string>pyRex</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QTabWidget" name="tabs">
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="recherches">
-       <attribute name="title">
-        <string>Recherches</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout">
-          <item>
-           <widget class="QLineEdit" name="search_edit1"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="search_btn1">
-            <property name="text">
-             <string>Rechercher</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QToolButton" name="btn_copy_url">
-            <property name="toolTip">
-             <string>Copier l'URL</string>
-            </property>
-            <property name="statusTip">
-             <string>Copier l'URL</string>
-            </property>
-            <property name="text">
-             <string>Copier l'URL</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>:/button/res/button_copy.png</normaloff>:/button/res/button_copy.png</iconset>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QToolButton" name="btn_download">
-            <property name="toolTip">
-             <string>Télécharger la sélection</string>
-            </property>
-            <property name="statusTip">
-             <string>Télécharger la sélection</string>
-            </property>
-            <property name="text">
-             <string>...</string>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>:/button/res/button_download.png</normaloff>:/button/res/button_download.png</iconset>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="QWidget" name="widget_recherches" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_9"/>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+  <widget class="QWidget" name="centralwidget"/>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <tabstops>
-  <tabstop>tabs</tabstop>
-  <tabstop>search_edit1</tabstop>
-  <tabstop>search_btn1</tabstop>
-  <tabstop>btn_download</tabstop>
-  <tabstop>btn_copy_url</tabstop>
- </tabstops>
  <resources>
   <include location="images.qrc"/>
   <include location="images.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>search_edit1</sender>
-   <signal>returnPressed()</signal>
-   <receiver>search_btn1</receiver>
-   <slot>click()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>327</x>
-     <y>52</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>680</x>
-     <y>52</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>tabs</sender>
-   <signal>currentChanged(int)</signal>
-   <receiver>MainWindow</receiver>
-   <slot>change_tab()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>399</x>
-     <y>290</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>399</x>
-     <y>299</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>search_btn1</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>search()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>680</x>
-     <y>52</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>399</x>
-     <y>299</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <slots>
   <slot>change_tab()</slot>
   <slot>search()</slot>
