--- a/ui/peers.ui
+++ b/ui/peers.ui
@@ -168,5 +168,25 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>table_peers</sender>
+   <signal>currentCellChanged(int,int,int,int)</signal>
+   <receiver>utilisateurs</receiver>
+   <slot>cell_selected(int,int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>268</x>
+     <y>110</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>268</x>
+     <y>198</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>cell_selected(int,int,int,int)</slot>
+ </slots>
 </ui>
