Lecture des dossiers partagés.

--- a/ui/shares.ui
+++ b/ui/shares.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTableWidget" name="tableWidget_3">
+    <widget class="QTableWidget" name="table_sharedirs">
      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
       <bool>false</bool>
      </attribute>
