--- a/ui/adv_search.ui
+++ b/ui/adv_search.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>739</width>
-    <height>343</height>
+    <width>791</width>
+    <height>413</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -329,7 +329,7 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>20</height>
+       <height>40</height>
       </size>
      </property>
     </spacer>
@@ -354,6 +354,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="search_btn2">
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>50</height>
+        </size>
+       </property>
        <property name="text">
         <string>Rechercher</string>
        </property>
@@ -373,6 +379,19 @@
       </spacer>
      </item>
     </layout>
+   </item>
+   <item>
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
