Options : - Si le fichier config.ini n'existe pas, on loade une config par défaut - S'il existe on loade la config de ce fichier - On écrit dans config.ini quand on clique sur "Enregistrer"

--- a/ui/options.ui
+++ b/ui/options.ui
@@ -336,9 +336,6 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QLineEdit" name="edit_tps_scan"/>
-       </item>
        <item row="5" column="0">
         <widget class="QLabel" name="label_35">
          <property name="text">
@@ -464,6 +461,13 @@
        </item>
        <item row="3" column="1">
         <widget class="QSpinBox" name="spin_nb_ip_scan"/>
+       </item>
+       <item row="4" column="1">
+        <widget class="QSpinBox" name="spin_tps_scan">
+         <property name="maximum">
+          <number>999</number>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
