--- a/ui/peers.ui
+++ b/ui/peers.ui
@@ -72,7 +72,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLabel" name="label_45">
+       <widget class="QLabel" name="label_nickname">
         <property name="text">
          <string/>
         </property>
@@ -86,7 +86,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLabel" name="label_46">
+       <widget class="QLabel" name="label_size_shares">
         <property name="text">
          <string/>
         </property>
@@ -100,7 +100,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLabel" name="label_47">
+       <widget class="QLabel" name="label_size_total_shares">
         <property name="text">
          <string/>
         </property>
@@ -114,7 +114,7 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QLabel" name="label_48">
+       <widget class="QLabel" name="label_ip">
         <property name="text">
          <string/>
         </property>
@@ -135,14 +135,14 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QLabel" name="label_50">
+       <widget class="QLabel" name="label_version">
         <property name="text">
          <string/>
         </property>
        </widget>
       </item>
       <item row="6" column="1">
-       <widget class="QLabel" name="label_51">
+       <widget class="QLabel" name="label_peers">
         <property name="text">
          <string/>
         </property>
